@@ -30,7 +30,9 @@
         <item>
             <key> <string>after_script_name</string> </key>
             <value>
-              <tuple/>
+              <list>
+                <string>sendNotificationByMail</string>
+              </list>
             </value>
         </item>
         <item>
@@ -77,6 +79,7 @@
             <key> <string>script_name</string> </key>
             <value>
               <list>
+                <string>SubscriptionForm_setEmail</string>
                 <string>checkAccountInexistance</string>
               </list>
             </value>
