@@ -1,3 +1,6 @@
+2008-11-17 fabien
+* add workflow scripts to send notification by email
+
 2008-11-17 mohamadou
 * update workflow script for new form.
 
